+ Поправка в адрессации картинок в CSS

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -154,7 +154,7 @@ body {
 }
 
 .state-ind.updating {
-	background-image: url('../images/throbber.gif');
+	background-image: url('../../skins/clarity/images/throbber.gif');
 }
 
 
@@ -368,7 +368,7 @@ body {
 
 .button .tip .tail {
 	height:5px;
-	background: url('../images/tip-tail.gif') no-repeat center bottom;
+	background: url('../../skins/clarity/images/tip-tail.gif') no-repeat center bottom;
 }
 
 .button.with-icon {
