--- a/apps/web.main/stock/styles/main.css
+++ b/apps/web.main/stock/styles/main.css
@@ -178,3 +178,13 @@ a:hover {text-decoration: underline;}
 	position: fixed;
 	bottom:0;
 }
+
+.throbber {
+	width:16px;
+	height:16px;
+	background: url(../../stock/images/throbber_tile.gif) no-repeat 1px 1px;
+}
+
+.throbber.updating {
+	background-position: 1px -19px;
+}
