--- a/apps/web.main/stock/styles/main.css
+++ b/apps/web.main/stock/styles/main.css
@@ -16,10 +16,18 @@ a:hover {text-decoration: underline;}
 #dialogue {
     position: absolute;
     margin: auto;
-    top:0; right:0; bottom:0; left:0;
+    top:0;
+	right:0;
+	bottom:0;
+	left:0;
     z-index:810;
     background-color: white;
-    overflow: auto;
+	/*overflow-y:auto;*/
+}
+
+#dialogueInner {
+	height:100%;
+	overflow-y: auto;
 }
 
 /* основное окно программы */
