адаптация под разрешение (2)

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -80,8 +80,7 @@ body {
 
 #dialogue {
 	width: 50%;
-//	height: 50%;
-	margin:100px auto;
+	margin:100px auto 80px auto;
 	min-width: 500px;
 	max-width: 800px;
 	min-height: 200px;
@@ -569,6 +568,11 @@ body {
 				}
 			}
 		}
+
+		#dialogue {
+			width: 65%;
+			margin:60px auto 35px auto;
+		}
 	}
 
 	&.high-res {
@@ -582,7 +586,7 @@ body {
 		}
 
 		#decoration-area {
-			height:70px;
+			height:80px;
 		}
 
 		#tinng-main-footer {
