--- a/apps/web.main/stock/styles/main.css
+++ b/apps/web.main/stock/styles/main.css
@@ -21,13 +21,15 @@ a:hover {text-decoration: underline;}
 	bottom:0;
 	left:0;
     z-index:810;
-    background-color: white;
-	/*overflow-y:auto;*/
 }
 
 #dialogueInner {
 	height:100%;
 	overflow-y: auto;
+}
+
+#dialogue section {
+	background-color: white;
 }
 
 /* основное окно программы */
