--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -94,7 +94,7 @@ body {
 
 		.title {
 			margin-right:30px;
-			padding:5px 0 4px 10px;
+			padding:9px 0 0 14px;
 			font-weight:bold;
 			font-size:120%;
 			color:#676767;
@@ -112,7 +112,7 @@ body {
 			font-weight: bold;
 			text-decoration: none;
 			color: #777;
-			padding: 3px;
+			padding: 4px;
 			text-align: center;
 			line-height: 90%;
 
