Исправление нерабочего поля ввода в FF

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -445,12 +445,13 @@ body {
 	border:1px solid #ccc;
 	margin-bottom:4px;
 	max-height: 200px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding:1px;
 }
 
 .textarea {
 	padding:4px 6px;
+	min-height: 1.4em;
 }
 
 /* tags */
