Мелкие исправления и дополнения

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -184,6 +184,13 @@ body {
 				vertical-align: bottom;
 			}
 		}
+
+		.portrait {
+			height:26px;
+			display:inline-block;
+			vertical-align: middle;
+			margin-right:8px;
+		}
 	}
 }
 
