--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -353,11 +353,10 @@ body {
 
 	.topic {
 		cursor:pointer;
-		border-left-width:8px;
+		border-left-width:10px;
 
 		&.active {
-			background-color: #EAFFE8;
-			border-color:#EAFFE8;
+			border-color:#9acd32;
 		}
 
 		.message {
@@ -387,7 +386,7 @@ body {
 	}
 
 	.post {
-		border-right-width:8px;
+		border-right-width:10px;
 
 		&.selected {
 			border-color:#9acd32;
@@ -419,7 +418,8 @@ body {
 	}
 
 	.unread {
-		background-color: #fffce6;
+		border-color: #ffbc1c;
+		background-color: #fff6df;
 	}
 }
 
