--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -357,6 +357,13 @@ body {
 
 		&.active {
 			border-color:#9acd32;
+			background-image: url(../../skins/clarity/images/active_topic_pointer.png);
+			background-repeat: no-repeat;
+			background-position: left center;
+		}
+
+		.data_cell {
+			padding-left:20px;
 		}
 
 		.message {
