--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -237,7 +237,7 @@ body {
 
 			.topicname {
 				font-size:110%;
-				padding:3px 4px 2px 4px;
+				padding:2px 4px;
 				border:1px dotted transparent;
 				float:left;
 				min-width: 200px;
@@ -248,6 +248,7 @@ body {
 					background-color: white;
 					color:#444;
 					border-color: #aaa;
+					min-height: 18px;
 				}
 			}
 		}
@@ -363,7 +364,7 @@ body {
 		}
 
 		.data_cell {
-			padding-left:20px;
+			padding-left:18px;
 		}
 
 		.message {
