--- a/apps/web.main/stock/styles/main.css
+++ b/apps/web.main/stock/styles/main.css
@@ -3,6 +3,7 @@ body	{ padding:0; margin:0;}
 hr		{ border: 0 none; height: 1px; }
 a		{cursor:pointer; text-decoration: none;}
 a:hover {text-decoration: underline;}
+img 	{border:0;}
 
 /* черная занавеска и окно на ней (старый вариант) */
 #curtain		{ z-index:800; }
